--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="hero">
        
         <div class="all-sem">
-          <div class="sem1 sem"><a  target="_blank" class="sem-link" href="https://drive.google.com/file/d/1ODerG9ewjicyFmm7cqJL51k53eV1vLy7/view?usp=drive_link">Computer Network </a></div>
+          <div class="sem1 sem"><a  target="_blank" class="sem-link" href="https://drive.google.com/file/d/1YzxoJBrM_adf4PlGjQM1ycm5HsxvyI6K/view?usp=sharing">CN (New 2023)</a></div>
          
           <div class="sem3 sem"><a target="_blank" class="sem-link" href="https://drive.google.com/file/d/1x4EFstOgVHQv04zb3KDEKuAeM-HGdQS3/view?usp=drive_link">C++</a></div>
           <div class="sem4 sem"><a target="_blank" class="sem-link" href="https://drive.google.com/file/d/1v_RBb-b3PCHzWXat2yUXogc-MHYfjb1I/view?usp=drive_link">Human Values and Ethic</a></div>
