--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          
         </div>
 
-        <div class="note">I will upload the new books (2023) for every subject of Sem 3 two days before the exam.</div>
+        <div class="note">New(2023) books for every subject of Sem 3 will upload in two days before the exam.</div>
       </div>
 
       <footer>
