--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <div class="sem3 sem"><a target="_blank" class="sem-link" href="https://drive.google.com/file/d/1nV7acEQ-7IMCOE6Gj0lOZDdgdexqqF9h/view?usp=sharing">C++ (New 2023)</a></div>
           <div class="sem4 sem"><a target="_blank" class="sem-link" href="https://drive.google.com/file/d/1rSXDysPiiHMzj3KHQ55JjpaSeZbpa067/view?usp=sharing">HVE (New 2023)</a></div>
           <div class="sem4 sem"><a target="_blank" class="sem-link" href="https://drive.google.com/file/d/1dnrey67yD3-GW7d2CocwtnnsETBtQDXe/view?usp=sharing">COA (New 2023)</a></div>
+          <div class="sem4 sem"><a target="_blank" class="sem-link" href="https://drive.google.com/file/d/1gtVuu27DlLpMjbZGx35Cn_D0GNBzwtCQ/view?usp=sharing">POM (New 2023)</a></div>
+          <div class="sem4 sem"><a target="_blank" class="sem-link" href="https://drive.google.com/file/d/1oQ0WTn-WOTBDK8nVri4BaiNWi8M-M2UC/view?usp=sharing">Python (New 2023)</a></div>
           
          
         </div>
