--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          
         </div>
 
-        <div class="note">New(2023) books for every subject of Sem 3 will upload in two days before the exam.</div>
+<!--         <div class="note">New(2023) books for every subject of Sem 3 will upload in two days before the exam.</div> -->
       </div>
 
       <footer>
